--- a/index.css
+++ b/index.css
@@ -25,10 +25,9 @@
   font-size: 24px;
 }
 
-
-.card:hover{
-    cursor: pointer;
-    border: 2px solid black;
+.card:hover {
+  cursor: pointer;
+  border: 2px solid black;
 }
 .card {
   width: 200px;
@@ -38,16 +37,100 @@
 }
 
 .res-image {
-
-    width: 150px;
-    height: 150px;
+  width: 150px;
+  height: 150px;
 }
 
-.serach{
-    padding: 30px;
+.serach {
+  padding: 30px;
 }
-.restra-container{
-display: flex;
-flex-wrap: wrap;
+.restra-container {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.fltr-btn {
+  background-color: rgb(196, 194, 194);
+  margin-left: 25px;
+}
+
+.shimmer-card {
+  width: 200px;
+  /* height: 00px; */
+  border-radius: 8px;
+  background-color: #f0f0f0;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin: 16px;
+  overflow: hidden;
+}
+
+.shimmer {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  background-size: 200% 100%;
+  animation: shimmer 1.5s infinite;
+}
+
+.shimmer-card-img {
+  width: 100%;
+  height: 200px;
+  background-color: #e0e0e0;
+  border-bottom: 1px solid #ccc;
+}
+
+.shimmer-card-content {
+  padding: 16px;
+}
+
+.shimmer-title {
+  width: 70%;
+  height: 24px;
+  margin-bottom: 16px;
+  background-color: #e0e0e0;
+}
+
+.shimmer-text {
+  width: 100%;
+  height: 16px;
+  margin-bottom: 8px;
+  background-color: #e0e0e0;
+}
+
+/* Shimmer animation */
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+
+.cardshimmer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.login-btn{
+    height: 50px;
+    padding: 10px;
+    cursor: pointer;
+    margin: inherit;
+
+}
+
+
+.search-btn{
+    padding: 0px 20px;
+    margin: 5px;
+}
+
+.Filter{
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 20px;
 }
