--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.logo {
+/* .logo {
   width: 130px;
   height: 130px;
 }
@@ -56,7 +56,6 @@
 
 .shimmer-card {
   width: 200px;
-  /* height: 00px; */
   border-radius: 8px;
   background-color: #f0f0f0;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -98,10 +97,10 @@
   height: 16px;
   margin-bottom: 8px;
   background-color: #e0e0e0;
-}
+} */
 
 /* Shimmer animation */
-@keyframes shimmer {
+/* @keyframes shimmer {
   0% {
     background-position: -200% 0;
   }
@@ -113,9 +112,9 @@
 .cardshimmer {
     display: flex;
     flex-wrap: wrap;
-}
+} */
 
-.login-btn{
+/* .login-btn{
     height: 50px;
     padding: 10px;
     cursor: pointer;
@@ -133,4 +132,9 @@
     display: flex;
     flex-wrap: wrap;
     margin-right: 20px;
-}
+} */
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
